Remove FocusBehavior from password labels.

Removes ACCESSIBLE_ONLY focus behavior which makes this label iterable
on Mac and causes lost focus behavior.

Bug: chromium:795182, chromium:795186
Change-Id: I6e87919a236f6ccac9aae74166e99659bb1ca16e
Reviewed-on: https://chromium-review.googlesource.com/832809
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524842}
Former-commit-id: 102f21a075a23845645b0a0f0e8c0b29aa579327